Fix gateway detail icon alignment + spacings

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -272,6 +272,10 @@ components
     margin-bottom: 0.5rem;
 }
 
+.option-container__content > * > :not(:last-child){
+    margin-bottom: 1.312rem;
+}
+
 .content__info {
     display: flex;
     flex-grow: 1;
@@ -294,12 +298,22 @@ components
 .content__info .details {
     font-size: 0.75rem;
     opacity: 0.5;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(6rem, 2fr));
 }
 
-/*icon on details*/
-.details img {
-    height: 0.8rem;
+/*child detail*/
+.details__item {
+    display: flex;
+    align-content: center;
+    align-items: center;
+}
+
+/*icon on child detail*/
+.details__item > img {
+    height: 1.066em;
     vertical-align: bottom;
+    margin-right: 0.34375em;
 }
 
 .content__info .fees {
